fixed scrollbar appearing whith no content

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -142,6 +142,7 @@
 // Footer rules
 .foot{
     position: absolute;
+    top: 0px;
     left: 0px;
     z-index: 100;
     .fcol();
